[package]
name = "eedsm-rs2"
version = "0.1.0"
edition = "2021"

[dependencies]
maplit = "1.0.2"
reqwest = { version = "0.12.3", features = [
    "json",
    "blocking",
    "gzip",
    "deflate",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
